--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 /* styles go here */
+.form__label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__label:last-child {
+  margin-bottom: initial;
+}
+
+.fieldset {
+  margin-bottom: 20px;
+}
